--- a/app/src/main/res/layout/activity_main_page.xml
+++ b/app/src/main/res/layout/activity_main_page.xml
@@ -10,16 +10,14 @@
 
     <ListView
         android:id="@+id/recylce"
-        android:layout_width="409dp"
-        android:layout_height="587dp"
+        android:layout_width="412dp"
+        android:layout_height="597dp"
         android:layout_margin="20dp"
 
 
         app:layout_constraintBottom_toTopOf="@+id/message"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="1.0"
         tools:ignore="MissingConstraints" />
 
     <com.google.android.material.textfield.TextInputLayout
@@ -33,8 +31,8 @@
         android:layout_marginBottom="10dp"
         android:hint="Enter Your Message"
         app:boxBackgroundMode="outline"
-        app:hintTextColor="@color/black"
         app:boxStrokeColor="@color/teal_200"
+        app:hintTextColor="@color/black"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/fab"
         app:layout_constraintStart_toStartOf="parent">
@@ -70,22 +68,25 @@
         android:theme="?attr/actionBarTheme"
         app:layout_constraintBottom_toTopOf="@+id/recylce"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="1.0" />
+        app:layout_constraintVertical_bias="0.0" />
 
     <TextView
         android:id="@+id/textView"
         android:layout_width="107dp"
         android:layout_height="34dp"
 
+        android:layout_marginBottom="4dp"
+        android:foregroundGravity="center_vertical"
         android:gravity="center"
         android:text="Sign Out"
         android:textSize="17dp"
+        app:layout_constraintBottom_toBottomOf="@+id/toolbar"
         app:layout_constraintEnd_toEndOf="@+id/toolbar"
-        app:layout_constraintHorizontal_bias="0.957"
+        app:layout_constraintHorizontal_bias="0.97"
         app:layout_constraintStart_toStartOf="@+id/toolbar"
-        tools:ignore="MissingConstraints"
-        tools:layout_editor_absoluteY="12dp" />
+        tools:ignore="MissingConstraints" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
